istio/javaapp-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: java-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: taxicab-java
spec:
  hosts:
  - "*"
  gateways:
  - java-gateway
  http:
  - match:
      - uri:
          prefix: /
      - uri:
          exact: /swagger-ui.html
  route:
      - destination:
          host: taxicab-svc
          port:
            number: 8080
