istio/taxicab-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: taxicab-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: taxicab-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - taxicab-gateway
  http:
  http:
    - match:
      - uri:
          prefix: /
      - uri:
          prefix: /swagger-ui.html
      route:
      - destination:
          host: taxicab-dev-svc
          port:
            number: 8080
